--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -75,15 +75,25 @@ pipeline {
 
     stage('Deploy to EKS') {
       steps {
-        sh """
-        aws eks update-kubeconfig --region ${AWS_REGION} --name ${CLUSTER}
+        withCredentials([[
+          $class: 'AmazonWebServicesCredentialsBinding',
+          credentialsId: 'aws-creds',
+          accessKeyVariable: 'AWS_ACCESS_KEY_ID',
+          secretKeyVariable: 'AWS_SECRET_ACCESS_KEY'
+        ]]) {
+          sh '''
+            set -e
+            aws sts get-caller-identity
 
-        helm upgrade --install deployecho helm/deployecho \
-          -n ${NAMESPACE} \
-          --set backend.image.tag=${TAG} \
-          --set frontend.image.tag=${TAG}
-        """
+            aws eks update-kubeconfig --region us-east-1 --name deployecho
+
+            kubectl get ns
+            kubectl apply -n dev -f k8s/
+            kubectl rollout status -n dev deploy/deployecho-backend --timeout=180s
+            kubectl rollout status -n dev deploy/deployecho-frontend --timeout=180s
+          '''
+        }
       }
-    }
   }
+
 }
