Tag images as dev-<gitsha>
Push to ECR

Helm deploy updates backend.image.tag and frontend.image.tag to the same tag

--atomic --wait ensures pipeline fails if rollout fails (and auto-rollbacks)

--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -3,10 +3,15 @@ pipeline {
 
   environment {
     AWS_REGION = "us-east-1"
+    AWS_DEFAULT_REGION = "us-east-1"
     ACCOUNT_ID = "826828992763"
     ECR = "${ACCOUNT_ID}.dkr.ecr.${AWS_REGION}.amazonaws.com"
+
     CLUSTER = "deployecho"
     NAMESPACE = "dev"
+
+    RELEASE = "deployecho"
+    CHART_DIR = "helm/deployecho"
   }
 
   stages {
@@ -20,11 +25,9 @@ pipeline {
     stage('Get Git SHA') {
       steps {
         script {
-          GIT_SHA = sh(
-            script: "git rev-parse --short HEAD",
-            returnStdout: true
-          ).trim()
-          env.TAG = "dev-${GIT_SHA}"
+          def gitSha = sh(script: "git rev-parse --short HEAD", returnStdout: true).trim()
+          env.GIT_SHA = gitSha
+          env.TAG = "dev-${gitSha}"
         }
       }
     }
@@ -37,43 +40,43 @@ pipeline {
           accessKeyVariable: 'AWS_ACCESS_KEY_ID',
           secretKeyVariable: 'AWS_SECRET_ACCESS_KEY'
         ]]) {
-        sh '''
-        set -e
-        aws --version
-        aws sts get-caller-identity
+          sh '''
+            set -e
+            aws --version
+            aws sts get-caller-identity
 
-        aws ecr get-login-password --region us-east-1 | \
-          docker login --username AWS --password-stdin \
-          826828992763.dkr.ecr.us-east-1.amazonaws.com
-      '''
+            aws ecr get-login-password --region "$AWS_REGION" | \
+              docker login --username AWS --password-stdin "$ECR"
+          '''
         }
       }
     }
 
-
     stage('Build & Push Backend') {
       steps {
-        sh """
-        docker buildx build --platform linux/amd64 \
-          -t ${ECR}/deployecho-backend:${TAG} \
-          -f app/backend/Dockerfile app/backend \
-          --push
-        """
+        sh '''
+          set -e
+          docker buildx build --platform linux/amd64 \
+            -t "$ECR/deployecho-backend:$TAG" \
+            -f app/backend/Dockerfile app/backend \
+            --push
+        '''
       }
     }
 
     stage('Build & Push Frontend') {
       steps {
-        sh """
-        docker buildx build --platform linux/amd64 \
-          -t ${ECR}/deployecho-frontend:${TAG} \
-          -f app/frontend/Dockerfile app/frontend \
-          --push
-        """
+        sh '''
+          set -e
+          docker buildx build --platform linux/amd64 \
+            -t "$ECR/deployecho-frontend:$TAG" \
+            -f app/frontend/Dockerfile app/frontend \
+            --push
+        '''
       }
     }
 
-    stage('Deploy to EKS') {
+    stage('Deploy to EKS (Helm)') {
       steps {
         withCredentials([[
           $class: 'AmazonWebServicesCredentialsBinding',
@@ -83,14 +86,33 @@ pipeline {
         ]]) {
           sh '''
             set -e
+            cd "$WORKSPACE"
+
             aws sts get-caller-identity
+            aws eks update-kubeconfig --region "$AWS_REGION" --name "$CLUSTER"
 
-            aws eks update-kubeconfig --region us-east-1 --name deployecho
+            # Install helm if missing
+            if ! command -v helm >/dev/null 2>&1; then
+              curl -fsSL https://raw.githubusercontent.com/helm/helm/main/scripts/get-helm-3 | bash
+            fi
 
-            kubectl get ns
-            kubectl apply -n dev -f k8s/
-            kubectl rollout status -n dev deploy/deployecho-backend --timeout=180s
-            kubectl rollout status -n dev deploy/deployecho-frontend --timeout=180s
+            # Ensure namespace exists
+            kubectl get ns "$NAMESPACE" >/dev/null 2>&1 || kubectl create ns "$NAMESPACE"
+
+            # Deploy using Helm + override image tags for this build
+            helm upgrade --install "$RELEASE" "$CHART_DIR" \
+              -n "$NAMESPACE" \
+              -f "$CHART_DIR/values.yaml" \
+              --set backend.image.repository="$ECR/deployecho-backend" \
+              --set backend.image.tag="$TAG" \
+              --set frontend.image.repository="$ECR/deployecho-frontend" \
+              --set frontend.image.tag="$TAG" \
+              --atomic --wait --timeout 5m
+
+            echo "=== Status ==="
+            kubectl get pods -n "$NAMESPACE"
+            kubectl get svc -n "$NAMESPACE"
+            kubectl get ingress -n "$NAMESPACE" || true
           '''
         }
       }
